suro-core/src/main/java/com/netflix/suro/routing/filter/lang/MessageFilterParser.java
// $ANTLR 3.4 MessageFilter.g 2012-08-22 11:55:58

package com.netflix.suro.routing.filter.lang;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class MessageFilterParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BETWEEN", "COMMENT", "EQUALS", "ESC_SEQ", "EXISTS", "EXPONENT", "FALSE", "GE", "GT", "HEX_DIGIT", "IN", "IS", "LE", "LT", "MATCHES", "NOT", "NOT_EQUALS", "NULL", "NUMBER", "OCTAL_ESC", "OR", "STRING", "TIME_MILLIS_FUN_NAME", "TIME_STRING_FUN_NAME", "TRUE", "UNICODE_ESC", "WS", "XPATH_FUN_NAME", "'('", "')'", "','"
    };

    public static final int EOF=-1;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int AND=4;
    public static final int BETWEEN=5;
    public static final int COMMENT=6;
    public static final int EQUALS=7;
    public static final int ESC_SEQ=8;
    public static final int EXISTS=9;
    public static final int EXPONENT=10;
    public static final int FALSE=11;
    public static final int GE=12;
    public static final int GT=13;
    public static final int HEX_DIGIT=14;
    public static final int IN=15;
    public static final int IS=16;
    public static final int LE=17;
    public static final int LT=18;
    public static final int MATCHES=19;
    public static final int NOT=20;
    public static final int NOT_EQUALS=21;
    public static final int NULL=22;
    public static final int NUMBER=23;
    public static final int OCTAL_ESC=24;
    public static final int OR=25;
    public static final int STRING=26;
    public static final int TIME_MILLIS_FUN_NAME=27;
    public static final int TIME_STRING_FUN_NAME=28;
    public static final int TRUE=29;
    public static final int UNICODE_ESC=30;
    public static final int WS=31;
    public static final int XPATH_FUN_NAME=32;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public MessageFilterParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public MessageFilterParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return MessageFilterParser.tokenNames; }
    public String getGrammarFileName() { return "MessageFilter.g"; }


    	/**
    		Creates a new parser that parses the given input string.
    	*/
    	public static MessageFilterParser createParser(String input) {
    	    ANTLRStringStream inputStream = new ANTLRStringStream(input);
    		MessageFilterLexer lexer = new MessageFilterLexer(inputStream);
    		CommonTokenStream tokens = new CommonTokenStream(lexer); 
    		
    		return new MessageFilterParser(tokens);
        }
    	
    	@Override
    	public void reportError(RecognitionException e) {
    		// if we've already reported an error and have not matched a token
    		// yet successfully, don't report any errors.
    		if ( state.errorRecovery ) {
    			return;
    		}
    		
    		state.syntaxErrors++; // don't count spurious
    		state.errorRecovery = true;

    		throwParsingError(this.getTokenNames(), e);
    	}
    	
    	// A slight modification of #displayRecognitionError(String[], RecognitionException)
    	private void throwParsingError(String[] tokenNames, RecognitionException e) {
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		
    		throw new MessageFilterParsingException(String.format("%s %s", hdr, msg), e);
    	}


    public static class filter_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "filter"
    // MessageFilter.g:102:1: filter : (a= boolean_expr -> $a) ( OR b= boolean_expr -> ^( OR $filter $b) )* ( EOF )? ;
    public final filter_return filter() throws RecognitionException {
        filter_return retval = new filter_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token OR1=null;
        Token EOF2=null;
        boolean_expr_return a =null;

        boolean_expr_return b =null;


        CommonTree OR1_tree=null;
        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_OR=new RewriteRuleTokenStream(adaptor,"token OR");
        RewriteRuleSubtreeStream stream_boolean_expr=new RewriteRuleSubtreeStream(adaptor,"rule boolean_expr");
        try {
            // MessageFilter.g:103:2: ( (a= boolean_expr -> $a) ( OR b= boolean_expr -> ^( OR $filter $b) )* ( EOF )? )
            // MessageFilter.g:103:4: (a= boolean_expr -> $a) ( OR b= boolean_expr -> ^( OR $filter $b) )* ( EOF )?
            {
            // MessageFilter.g:103:4: (a= boolean_expr -> $a)
            // MessageFilter.g:103:5: a= boolean_expr
            {
            pushFollow(FOLLOW_boolean_expr_in_filter323);
            a=boolean_expr();

            state._fsp--;

            stream_boolean_expr.add(a.getTree());

            // AST REWRITE
            // elements: a
            // token labels:
            // rule labels: retval, a
            // token list labels:
            // rule list labels:
            // wildcard labels:
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 103:19: -> $a
            {
                adaptor.addChild(root_0, stream_a.nextTree());

            }


            retval.tree = root_0;

            }


            // MessageFilter.g:103:25: ( OR b= boolean_expr -> ^( OR $filter $b) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // MessageFilter.g:103:26: OR b= boolean_expr
            	    {
            	    OR1=(Token)match(input,OR,FOLLOW_OR_in_filter330);
            	    stream_OR.add(OR1);


            	    pushFollow(FOLLOW_boolean_expr_in_filter334);
            	    b=boolean_expr();

            	    state._fsp--;

            	    stream_boolean_expr.add(b.getTree());

            	    // AST REWRITE
            	    // elements: OR, filter, b
            	    // token labels:
            	    // rule labels: retval, b
            	    // token list labels:
            	    // rule list labels:
            	    // wildcard labels:
            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            	    RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"rule b",b!=null?b.tree:null);

            	    root_0 = (CommonTree)adaptor.nil();
            	    // 103:44: -> ^( OR $filter $b)
            	    {
            	        // MessageFilter.g:103:47: ^( OR $filter $b)
            	        {
            	        CommonTree root_1 = (CommonTree)adaptor.nil();
            	        root_1 = (CommonTree)adaptor.becomeRoot(
            	        new OrTreeNode(stream_OR.nextToken())
            	        , root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_b.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // MessageFilter.g:103:79: ( EOF )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==EOF) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // MessageFilter.g:103:79: EOF
                    {
                    EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_filter354);
                    stream_EOF.add(EOF2);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "filter"


    public static class boolean_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "boolean_expr"
    // MessageFilter.g:106:1: boolean_expr : (a= boolean_factor -> $a) ( AND b= boolean_factor -> ^( AND $boolean_expr $b) )* ;
    public final boolean_expr_return boolean_expr() throws RecognitionException {
        boolean_expr_return retval = new boolean_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AND3=null;
        boolean_factor_return a =null;

        boolean_factor_return b =null;


        CommonTree AND3_tree=null;
        RewriteRuleTokenStream stream_AND=new RewriteRuleTokenStream(adaptor,"token AND");
        RewriteRuleSubtreeStream stream_boolean_factor=new RewriteRuleSubtreeStream(adaptor,"rule boolean_factor");
        try {
            // MessageFilter.g:107:2: ( (a= boolean_factor -> $a) ( AND b= boolean_factor -> ^( AND $boolean_expr $b) )* )
            // MessageFilter.g:107:4: (a= boolean_factor -> $a) ( AND b= boolean_factor -> ^( AND $boolean_expr $b) )*
            {
            // MessageFilter.g:107:4: (a= boolean_factor -> $a)
            // MessageFilter.g:107:5: a= boolean_factor
            {
            pushFollow(FOLLOW_boolean_factor_in_boolean_expr370);
            a=boolean_factor();

            state._fsp--;

            stream_boolean_factor.add(a.getTree());

            // AST REWRITE
            // elements: a
            // token labels:
            // rule labels: retval, a
            // token list labels:
            // rule list labels:
            // wildcard labels:
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 107:21: -> $a
            {
                adaptor.addChild(root_0, stream_a.nextTree());

            }


            retval.tree = root_0;

            }


            // MessageFilter.g:107:27: ( AND b= boolean_factor -> ^( AND $boolean_expr $b) )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // MessageFilter.g:107:28: AND b= boolean_factor
            	    {
            	    AND3=(Token)match(input,AND,FOLLOW_AND_in_boolean_expr377);
            	    stream_AND.add(AND3);


            	    pushFollow(FOLLOW_boolean_factor_in_boolean_expr381);
            	    b=boolean_factor();

            	    state._fsp--;

            	    stream_boolean_factor.add(b.getTree());

            	    // AST REWRITE
            	    // elements: b, boolean_expr, AND
            	    // token labels:
            	    // rule labels: retval, b
            	    // token list labels:
            	    // rule list labels:
            	    // wildcard labels:
            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            	    RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"rule b",b!=null?b.tree:null);

            	    root_0 = (CommonTree)adaptor.nil();
            	    // 107:49: -> ^( AND $boolean_expr $b)
            	    {
            	        // MessageFilter.g:107:52: ^( AND $boolean_expr $b)
            	        {
            	        CommonTree root_1 = (CommonTree)adaptor.nil();
            	        root_1 = (CommonTree)adaptor.becomeRoot(
            	        new AndTreeNode(stream_AND.nextToken())
            	        , root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_b.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "boolean_expr"


    public static class boolean_factor_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "boolean_factor"
    // MessageFilter.g:111:1: boolean_factor : ( predicate | NOT predicate -> ^( NOT predicate ) );
    public final boolean_factor_return boolean_factor() throws RecognitionException {
        boolean_factor_return retval = new boolean_factor_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NOT5=null;
        predicate_return predicate4 =null;

        predicate_return predicate6 =null;


        CommonTree NOT5_tree=null;
        RewriteRuleTokenStream stream_NOT=new RewriteRuleTokenStream(adaptor,"token NOT");
        RewriteRuleSubtreeStream stream_predicate=new RewriteRuleSubtreeStream(adaptor,"rule predicate");
        try {
            // MessageFilter.g:112:2: ( predicate | NOT predicate -> ^( NOT predicate ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==EXISTS||LA4_0==FALSE||LA4_0==TRUE||(LA4_0 >= XPATH_FUN_NAME && LA4_0 <= 33)) ) {
                alt4=1;
            }
            else if ( (LA4_0==NOT) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // MessageFilter.g:112:4: predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_predicate_in_boolean_factor414);
                    predicate4=predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, predicate4.getTree());

                    }
                    break;
                case 2 :
                    // MessageFilter.g:113:6: NOT predicate
                    {
                    NOT5=(Token)match(input,NOT,FOLLOW_NOT_in_boolean_factor423);
                    stream_NOT.add(NOT5);


                    pushFollow(FOLLOW_predicate_in_boolean_factor425);
                    predicate6=predicate();

                    state._fsp--;

                    stream_predicate.add(predicate6.getTree());

                    // AST REWRITE
                    // elements: NOT, predicate
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 113:20: -> ^( NOT predicate )
                    {
                        // MessageFilter.g:113:23: ^( NOT predicate )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        new NotTreeNode(stream_NOT.nextToken())
                        , root_1);

                        adaptor.addChild(root_1, stream_predicate.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "boolean_factor"


    public static class predicate_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "predicate"
    // MessageFilter.g:116:1: predicate : ( '(' filter ')' -> filter | comparison_function | between_predicate | in_predicate | null_predicate | regex_predicate | exists_predicate | TRUE -> TRUE | FALSE -> FALSE );
    public final predicate_return predicate() throws RecognitionException {
        predicate_return retval = new predicate_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal7=null;
        Token char_literal9=null;
        Token TRUE16=null;
        Token FALSE17=null;
        filter_return filter8 =null;

        comparison_function_return comparison_function10 =null;

        between_predicate_return between_predicate11 =null;

        in_predicate_return in_predicate12 =null;

        null_predicate_return null_predicate13 =null;

        regex_predicate_return regex_predicate14 =null;

        exists_predicate_return exists_predicate15 =null;


        CommonTree char_literal7_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree TRUE16_tree=null;
        CommonTree FALSE17_tree=null;
        RewriteRuleTokenStream stream_FALSE=new RewriteRuleTokenStream(adaptor,"token FALSE");
        RewriteRuleTokenStream stream_TRUE=new RewriteRuleTokenStream(adaptor,"token TRUE");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
        try {
            // MessageFilter.g:117:2: ( '(' filter ')' -> filter | comparison_function | between_predicate | in_predicate | null_predicate | regex_predicate | exists_predicate | TRUE -> TRUE | FALSE -> FALSE )
            int alt5=9;
            switch ( input.LA(1) ) {
            case 33:
                {
                alt5=1;
                }
                break;
            case XPATH_FUN_NAME:
                {
                int LA5_2 = input.LA(2);

                if ( (LA5_2==33) ) {
                    int LA5_6 = input.LA(3);

                    if ( (LA5_6==STRING) ) {
                        int LA5_7 = input.LA(4);

                        if ( (LA5_7==34) ) {
                            switch ( input.LA(5) ) {
                            case EQUALS:
                            case GE:
                            case GT:
                            case LE:
                            case LT:
                            case NOT_EQUALS:
                                {
                                alt5=2;
                                }
                                break;
                            case BETWEEN:
                                {
                                alt5=3;
                                }
                                break;
                            case IN:
                                {
                                alt5=4;
                                }
                                break;
                            case IS:
                                {
                                alt5=5;
                                }
                                break;
                            case MATCHES:
                                {
                                alt5=6;
                                }
                                break;
                            case EXISTS:
                                {
                                alt5=7;
                                }
                                break;
                            default:
                                NoViableAltException nvae =
                                    new NoViableAltException("", 5, 8, input);

                                throw nvae;

                            }

                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 7, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 6, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 2, input);

                    throw nvae;

                }
                }
                break;
            case EXISTS:
                {
                alt5=7;
                }
                break;
            case TRUE:
                {
                alt5=8;
                }
                break;
            case FALSE:
                {
                alt5=9;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // MessageFilter.g:117:4: '(' filter ')'
                    {
                    char_literal7=(Token)match(input,33,FOLLOW_33_in_predicate448);
                    stream_33.add(char_literal7);


                    pushFollow(FOLLOW_filter_in_predicate450);
                    filter8=filter();

                    state._fsp--;

                    stream_filter.add(filter8.getTree());

                    char_literal9=(Token)match(input,34,FOLLOW_34_in_predicate452);
                    stream_34.add(char_literal9);


                    // AST REWRITE
                    // elements: filter
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 117:19: -> filter
                    {
                        adaptor.addChild(root_0, stream_filter.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // MessageFilter.g:118:3: comparison_function
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_comparison_function_in_predicate463);
                    comparison_function10=comparison_function();

                    state._fsp--;

                    adaptor.addChild(root_0, comparison_function10.getTree());

                    }
                    break;
                case 3 :
                    // MessageFilter.g:119:3: between_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_between_predicate_in_predicate469);
                    between_predicate11=between_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, between_predicate11.getTree());

                    }
                    break;
                case 4 :
                    // MessageFilter.g:120:3: in_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_in_predicate_in_predicate475);
                    in_predicate12=in_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, in_predicate12.getTree());

                    }
                    break;
                case 5 :
                    // MessageFilter.g:121:3: null_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_null_predicate_in_predicate481);
                    null_predicate13=null_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, null_predicate13.getTree());

                    }
                    break;
                case 6 :
                    // MessageFilter.g:122:3: regex_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_regex_predicate_in_predicate487);
                    regex_predicate14=regex_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, regex_predicate14.getTree());

                    }
                    break;
                case 7 :
                    // MessageFilter.g:123:3: exists_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_exists_predicate_in_predicate493);
                    exists_predicate15=exists_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, exists_predicate15.getTree());

                    }
                    break;
                case 8 :
                    // MessageFilter.g:124:3: TRUE
                    {
                    TRUE16=(Token)match(input,TRUE,FOLLOW_TRUE_in_predicate499);
                    stream_TRUE.add(TRUE16);


                    // AST REWRITE
                    // elements: TRUE
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 124:8: -> TRUE
                    {
                        adaptor.addChild(root_0,
                        new TrueValueTreeNode(stream_TRUE.nextToken())
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 9 :
                    // MessageFilter.g:125:3: FALSE
                    {
                    FALSE17=(Token)match(input,FALSE,FOLLOW_FALSE_in_predicate511);
                    stream_FALSE.add(FALSE17);


                    // AST REWRITE
                    // elements: FALSE
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 125:9: -> FALSE
                    {
                        adaptor.addChild(root_0,
                        new FalseValueTreeNode(stream_FALSE.nextToken())
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "predicate"


    public static class comparison_function_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

